test: use real class instances instead of mocks